# fluff

./: .gitignore  Cargo.toml  GUI_NOTES.md  NOTES.md  egui.json  global-settings.json  imgui.ini  renderconfig.json5  renderconfig.lua  renderconfig.xml  rustfmt.toml  settings.json
.cargo/: config.toml
crates/alembic-ogawa/: Cargo.toml
crates/alembic-ogawa/src/: archive.rs  data_type.rs  error.rs  group.rs  lib.rs  metadata.rs  object.rs  property.rs  schema.rs
crates/alembic-ogawa/src/geom/: mod.rs  param.rs  polymesh.rs  xform.rs
crates/curve-fit-nd/: Cargo.toml
crates/curve-fit-nd-sys/: Cargo.toml  build.rs
crates/curve-fit-nd-sys/curve-fit-nd/: REVISION.txt
crates/curve-fit-nd/src/: lib.rs
crates/fluff/: Cargo.toml  build.rs
crates/fluff-gui/: Cargo.toml
crates/fluff-gui/examples/: gallery.rs
crates/fluff-gui/src/: colors.rs  lib.rs
crates/fluff-gui/src/widgets/: button.rs  dialog.rs  dialog_buttons.rs  fcurve.rs  gradient.rs  menu.rs  mod.rs  scroll.rs  slider.rs  spinner.rs  uniform_grid.rs
crates/fluff-shaders/src/: common.rs  compile.rs  session.rs
crates/fluff/shaders/: bezier.inc.glsl  bezier_stroke.frag  bin_curves.frag  bin_curves.glsl  bin_curves.mesh  bin_curves.task  bin_rast.frag  bin_rast.mesh  bin_rast.task  bindless.glsl  bindless.inc.glsl  common.glsl  common.inc.glsl  comp.spv  compute_test.comp  curve_binning.glsl  curve_binning_render.comp  curve_binning_render_stripped.comp  curve_binning_stripped.glsl  curve_oit.glsl  curve_oit_resolve.glsl  curve_oit_v2.glsl  draw_curves.comp  egui.frag  egui.vert  fill.frag  fill.vert  imgui.frag  imgui.vert  overlay.vert  overlay_lines.glsl  overlay_polygons.frag  overlay_polygons.vert  quad.vert  sat.glsl  shared.inc.glsl  strokes.glsl  temporal_average.comp  temporal_average_2.comp  temporal_average_3.comp  (+2 more)
crates/fluff/shaders/overlay/: lines.glsl
crates/fluff/slang/: bindless.slang  egui.slang  geometry.slang  options.txt  overlay_lines.slang  overlay_polygons.slang  shared.slang  temporal_average.slang
crates/fluff/src/: animation.rs  app.rs  camera_control.rs  egui_backend.rs  imgui_backend.rs  main.rs  overlay.rs  scene.rs  tool.rs  util.rs
crates/fluff/src/data/: mod.rs  scene.rs  timeline.rs  viewport.rs
crates/fluff/src/engine/: bindless.rs  config.rs  mod.rs  shader.rs  uniform_block.rs
crates/fluff/src/engine2/: bindless.rs  descriptors.rs  mod.rs  shader.rs  uniform_block.rs
crates/fluff/src/gpu/: append_buffer.rs  mod.rs  pipelines.rs
crates/fluff/src/imgui/: curve.rs  mod.rs  popup_button.rs
crates/fluff/src/pass/: bin_curves.rs  mod.rs
crates/fluff/src/scene/: alembic_io.rs  debug_render.rs  deprecated.rs  mod.rs  polymesh.rs  render.rs
crates/fluff/src/shaders/: bindings.rs  mod.rs  shared.rs  types.rs
crates/fluff/src/shaders/compiler/: mod.rs  session.rs
crates/fluff/src/ui/: curve.rs  highlight.rs  icon_button.rs  mod.rs  popup_button.rs  progress_dialog.rs  timeline.rs  viewport.rs  vulkan_interop.rs
crates/fluff/src/util/: gpu_append_buffer.rs
crates/graal/: Cargo.toml
crates/graal-macros/src/: vertex.rs
crates/graal-macros/tests/: attachments.rs  buffer.rs  vertex.rs
crates/graal/examples/: copy_image.rs
crates/graal/src/: command.rs  device.rs  instance.rs  lib.rs  surface.rs  types.rs
crates/graal/src/command/: blit.rs  compute.rs  render.rs
crates/graal/src/device/: bindless.rs
crates/graal/src/platform/: mod.rs  windows.rs
crates/graal/src/platform_impl/: windows.rs
crates/graal/src/util/: command.rs  device.rs
crates/graal/tests/: win32_share.rs
crates/houdinio/: Cargo.toml
crates/houdinio/src/: error.rs  lib.rs  parser.rs
crates/houdinio/src/parser/: json.rs
crates/kyute/: Cargo.toml
crates/kyute-common/: Cargo.toml
crates/kyute-common/src/: color.rs  layout_unit.rs  lib.rs
crates/kyute-dsl/: Cargo.toml
crates/kyute-dsl/src/: dep_expr.rs  gen.rs  lib.rs  parse.rs
crates/kyute-dsl/tests/: control.rs  templates.rs
crates/kyute-macros/: Cargo.toml
crates/kyute-macros/src/: lib.rs
crates/kyute-macros/tests/: control.rs
crates/kyute-text/: Cargo.toml
crates/kyute-text/src/: lib.rs  paragraph.rs  style.rs  text_run.rs
crates/kyute/examples/: component.rs  component2.rs  flex_layout_test.rs  simple.rs  swap_chain.rs  system_compositor.rs
crates/kyute/src/: app_globals.rs  application.rs  callbacks.rs  color.rs  component.rs  compositor.rs  debug.rs  element.rs  element2.rs  element_state.rs  event.rs  focus.rs  handler.rs  input_event.rs  lib.rs  model.rs  node.rs  notifier.rs  paint_ctx.rs  reactive.rs  template.rs  util.rs  window.rs
crates/kyute/src/backend/windows/: compositor.rs  mod.rs
crates/kyute/src/drawing/: box_shadow.rs  context.rs  decoration.rs  image.rs  linear_gradient.rs  mod.rs  paint.rs  placement.rs
crates/kyute/src/elements/: button.rs  draw.rs  flex.rs  frame.rs  layer.rs  mod.rs  text.rs  text_edit.rs
crates/kyute/src/event/: key_code.rs  mod.rs
crates/kyute/src/input_event/: key_code.rs
crates/kyute/src/layout/: cache.rs  flex.rs  grid.rs  mod.rs
crates/kyute/src/model/: mod.rs
crates/kyute/src/platform/: mod.rs
crates/kyute/src/platform/windows/: compositor.rs  draw_surface.rs  event_loop.rs  mod.rs  swap_chain.rs  vulkan_interop.rs  window.rs
crates/kyute/src/style/: mod.rs
crates/kyute/src/text/: mod.rs  selection.rs  skia.rs  style.rs  text_run.rs
crates/kyute/src/tree/: mod.rs
crates/kyute/src/util/: rc_cell.rs
crates/kyute/src/widgets/: builder.rs  button.rs  draw.rs  flex.rs  frame.rs  interact.rs  mod.rs  text.rs  text_edit.rs
crates/shader-bridge/: Cargo.toml
crates/shader-bridge/src/: compiler.rs  embed_shaders.rs  gen.rs  lib.rs  parse.rs  reflect.rs  syntax_bindgen.rs  utils.rs
data/geo/: bands.hipnc  grass_test.hipnc  grass_test2.hipnc  untitled.hipnc  vaguely_hair.hipnc
graveyard/shader-bridge/src/: gen.rs  lexer.rs  reflect.rs  utils.rs
graveyard/vgbc/src/: packf32.rs  writer.rs
