[workspace]
members = ["crates/curve-fit-nd", "crates/curve-fit-nd-sys", "crates/fluff", "crates/houdinio", "crates/shader-bridge", "crates/kyute", "crates/kyute-common", "crates/fluff-gui"]
resolver = "2"

[workspace.dependencies]
graal = { path = "../graal/graal" }
houdinio = { path = "crates/houdinio" }
shader-bridge = { path = "crates/shader-bridge" }
curve-fit-nd-sys = { path = "crates/curve-fit-nd-sys" }
curve-fit-nd = { path = "crates/curve-fit-nd" }
kyute = { path = "crates/kyute" }
#kyute-text = { path = "crates/kyute-text" }
kyute-common = { path = "crates/kyute-common" }
#kyute-macros = { path = "crates/kyute-macros" }

[profile.release]
debug = true

