[workspace]
members = [
    "crates/curve-fit-nd",
    "crates/curve-fit-nd-sys",
    "crates/fluff",
    "crates/houdinio",
    "crates/shader-bridge",
    "crates/kyute",
    "crates/kyute-common",
    "crates/fluff-gui",
    "crates/graal",
    "crates/graal-macros"]
resolver = "2"

[workspace.dependencies]
graal = { path = "crates/graal" }
graal-macros = { path = "crates/graal-macros" }
houdinio = { path = "crates/houdinio" }
shader-bridge = { path = "crates/shader-bridge" }
curve-fit-nd-sys = { path = "crates/curve-fit-nd-sys" }
curve-fit-nd = { path = "crates/curve-fit-nd" }
kyute = { path = "crates/kyute" }
kyute-common = { path = "crates/kyute-common" }

[profile.release]
debug = true

