[package]
name = "fluff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29.3"
obj = "0.10.2"
glam = "0.24.2"
regex = "1.10.2"
tracing-subscriber = { version = "0.2.17", features = ["fmt"] }
rfd = "0.12.1"
graal = { workspace = true }
houdinio = { workspace = true }
image = "0.24.8"
egui = { version = "0.25", features = ["persistence"] }
egui-winit = "0.25"
egui-phosphor = { version = "0.3.2", features = ["fill"] }
egui_extras = { version = "0.25", features = ["syntect"] }
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }
syntect = "5.1.0"
spirv-reflect = { path = "../../../spirv-reflect-rs" }
thiserror = "1.0.50"
slotmap = "1.0.7"
tracing = "0.1.40"
bytemuck = "1.16.1"
bitflags = "2.6.0"
scoped-tls = "1.0.1"
curve-fit-nd = { workspace = true }
anyhow = "1.0.86"
rand = "0.9.0-alpha.1"
#splines = { version = "4.3.1", features = ["serde", "glam"] }
uniform-cubic-splines = { version = "0.1.8", default-features = false, features = ["std"] }
num-traits = "0.2.19"
shader-bridge = { workspace = true }

[build-dependencies]
shader-bridge = { workspace = true }