[package]
name = "fluff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29.3"
obj = "0.10.2"
glam = "0.24.2"
regex = "1.10.2"
tracing-subscriber = { version = "0.2.17", features = ["fmt"] }
rfd = "0.12.1"
graal = { workspace = true }
houdinio = { workspace = true }
image = "0.24.8"
egui = { version = "0.25", features = ["persistence"] }
egui-winit = "0.25"
egui_extras = { version = "0.25" }
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }
syntect = "5.1.0"
thiserror = "1.0.50"
slotmap = "1.0.7"
tracing = "0.1.40"
bytemuck = "1.16.1"
bitflags = "2.6.0"
scoped-tls = "1.0.1"
curve-fit-nd = { workspace = true }
anyhow = "1.0.86"
rand = "0.9.0-alpha.1"
uniform-cubic-splines = { version = "0.1.8", default-features = false, features = ["std"] }
num-traits = "0.2.19"
shader-bridge = { workspace = true, optional = true }
alembic-ogawa = { workspace = true }
kyute = { workspace = true, features = ["d3d", "vulkan-interop"] }
fluff-gui = { workspace = true }

[target.'cfg(target_os="windows")'.dependencies]
windows = { version = "0.58.0", features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_Graphics_Direct3D12",
    "Win32_UI_Shell_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct2D_Common",
    "System",
    "Foundation",
    "Graphics_DirectX",
    "UI_Composition",
    "UI_Composition_Desktop",
    "Foundation_Numerics",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Security",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_DirectComposition"] }

[build-dependencies]
shader-bridge = { workspace = true }

[features]
default = ["shader-hot-reload"]
shader-hot-reload = ["dep:shader-bridge"]
