[package]
name = "shader-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
quote = "1.0"
shaderc = "0.8"
spirq = "1.2"
anyhow = "1.0"
tracing = "0.1"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
heck = "0.5"
slang = { git = "https://github.com/FloatyMonkey/slang-rs.git" }
thiserror = "1.0"

[dev-dependencies]
env_logger = "0.10"